Minimal tests parsing model

--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -9,19 +9,19 @@ endif (MSVC)
 
 add_subdirectory(application)
 add_subdirectory(constraints-builder)
+add_subdirectory(expressions)
 add_subdirectory(hydro)
 add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(lps)
 add_subdirectory(misc)
+add_subdirectory(modelParser)
+add_subdirectory(modeler)
 add_subdirectory(optimisation)
 add_subdirectory(signal-handling)
 add_subdirectory(simulation)
 add_subdirectory(ts-generator)
 add_subdirectory(utils)
 add_subdirectory(variable)
-add_subdirectory(modeler)
-add_subdirectory(expressions)
-
 #
 # Resource file for Windows
 #
@@ -55,25 +55,26 @@ add_library(solver-lib INTERFACE
 add_executable(antares-solver
         main.cpp
         ${SRCS}
+        modelParser/encoders.hxx
 )
 
 set_target_properties(antares-solver PROPERTIES OUTPUT_NAME ${exec_name})
 
 set(ANTARES_SOLVER_LIBS
-	Antares::args_helper
-	Antares::date
-	Antares::benchmarking
-	Antares::result_writer
-	Antares::sys
-	Antares::infoCollection
-	Antares::checks
-	Antares::misc
+        Antares::args_helper
+        Antares::date
+        Antares::benchmarking
+        Antares::result_writer
+        Antares::sys
+        Antares::infoCollection
+        Antares::checks
+        Antares::misc
         Antares::optimization-options
         Antares::signal-handling
         Antares::locale
-	yuni-static-uuid
-	yuni-static-core		
-	${CMAKE_THREADS_LIBS_INIT}
+        yuni-static-uuid
+        yuni-static-core
+        ${CMAKE_THREADS_LIBS_INIT}
 )
 
 set(ANTARES_SOLVER_LIBS ${ANTARES_SOLVER_LIBS}
