--- a/src/tests/src/solver/CMakeLists.txt
+++ b/src/tests/src/solver/CMakeLists.txt
@@ -1,7 +1,8 @@
-add_subdirectory(simulation)
-add_subdirectory(optimisation)
-add_subdirectory(utils)
+add_subdirectory(expressions)
 add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(lps)
+add_subdirectory(modelParser)
 add_subdirectory(modeler)
-add_subdirectory(expressions)
+add_subdirectory(optimisation)
+add_subdirectory(simulation)
+add_subdirectory(utils)
