--- a/src/tests/src/solver/modelParser/CMakeLists.txt
+++ b/src/tests/src/solver/modelParser/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add source files
 set(SOURCE_FILES
         testModelParser.cpp
+        testModelTranslator.cpp
 )
 
 # Add executable
@@ -11,6 +12,7 @@ target_link_libraries(TestModelParser
         PRIVATE
         Boost::unit_test_framework
         Antares::modelParser
+        antares-solver-libObjectModel
 )
 
 # Storing test-toybox under the folder Unit-tests in the IDE
