--- a/.github/workflows/windows-vcpkg.yml
+++ b/.github/workflows/windows-vcpkg.yml
@@ -110,6 +110,14 @@ jobs:
       - name: Install pip dependencies if necessary
         run: pip install -r src/tests/examples/requirements.txt
 
+      - name: Init submodule Antares_Simulator_Tests
+        run: |
+          git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests
+
+      - name: Init submodule Antares_Simulator_Tests_NR
+        run: |
+          git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests_NR
+
       - name: Enable git longpaths
         run: git config --system core.longpaths true
 
@@ -144,22 +152,14 @@ jobs:
         run: |
           echo "SIMTEST=${{ fromJson(env.SIMTEST_JSON).version }}" >> $GITHUB_ENV
 
-      - name: Init submodule Antares_Simulator_Tests
-        run: |
-          git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests
-
-      - name: Init submodule Antares_Simulator_Tests_NR
-        run: |
-          git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests_NR
-
-      - name: Run named mps tests
-        if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
-        uses: ./.github/workflows/run-tests
-        with:
-          simtest-tag: ${{ env.SIMTEST }}
-          batch-name: valid-named-mps
-          os: ${{ env.os }}
-          variant: "named-mps"
+      # - name: Run named mps tests
+      #   if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
+      #   uses: ./.github/workflows/run-tests
+      #   with:
+      #     simtest-tag: ${{ env.SIMTEST }}
+      #     batch-name: valid-named-mps
+      #     os: ${{ env.os }}
+      #     variant: "named-mps"
 
       - name: Run unfeasibility-related tests
         if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
@@ -250,13 +250,13 @@ jobs:
         with:
           feature: "features/short_tests.feature"
 
-      - name: Run mps tests
-        if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
-        uses: ./.github/workflows/run-tests
-        with:
-          simtest-tag: ${{ env.SIMTEST }}
-          batch-name: valid-mps
-          os: ${{ env.os }}
+      # - name: Run mps tests
+      #   if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
+      #   uses: ./.github/workflows/run-tests
+      #   with:
+      #     simtest-tag: ${{ env.SIMTEST }}
+      #     batch-name: valid-mps
+      #     os: ${{ env.os }}
 
       - name: Run parallel tests
         if: ${{ env.RUN_EXTENDED_TESTS == 'true' && !cancelled() }}
