[ANT-2206] yaml to model (#2431)
# Description
Expose `Antares::Solver::ObjectModel::Library
Antares::Solver::ModelConverter::convert(const
Antares::Solver::ModelParser::Library& library)`

# Implementation details
Convert a Library resulting from yaml parsing to a library in the
context ob ObjectModel

Use builder pattern to construct complexes object such as library and
models

Declaring a lib ModelConverter as the same level as ObjectModel and
ObjectParser prevent either from depending on both. Conceptually they're
independent from each others

Defines two ValueType enums in two different contexts. Allow for
diverging evolution

# Limitations

- [ANT-2228](https://gopro-tickets.rte-france.com/browse/ANT-2228) Gérer
les exception de champs superflus
- [ANT-2230](https://gopro-tickets.rte-france.com/browse/ANT-2230) Gérer
les champs optionnels
- [ANT-2233](https://gopro-tickets.rte-france.com/browse/ANT-2233) Pour
les valueType, gérer la capitalisation
- [ANT-2233](https://gopro-tickets.rte-france.com/browse/ANT-2233)
value_type pour les Parameters
- [ANT-2235](https://gopro-tickets.rte-france.com/browse/ANT-2235)
contraintes et binding_constraints
- [ANT-2236](https://gopro-tickets.rte-france.com/browse/ANT-2236)
Constraintes et expressions, inadéquation models/yaml
- Ports are not handled in the scope of this PR/ANT-2206

---------

Co-authored-by: Vincent Payet <vincent.payet@rte-france.com>
Co-authored-by: payetvin <113102157+payetvin@users.noreply.github.com>
Co-authored-by: guilpier-code <62292552+guilpier-code@users.noreply.github.com>
Co-authored-by: Florian OMNES <florian.omnes@rte-france.com>

--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory(infeasible-problem-analysis)
 add_subdirectory(libModelObject)
 add_subdirectory(lps)
 add_subdirectory(misc)
+add_subdirectory(modelConverter)
 add_subdirectory(modelParser)
 add_subdirectory(modeler)
 add_subdirectory(optimisation)
