[ANT-2206] Full exemple (#2448)
Ful exemple of the parsing + conversion to model of a library

---------

Co-authored-by: Vincent Payet <vincent.payet@rte-france.com>
Co-authored-by: payetvin <113102157+payetvin@users.noreply.github.com>
Co-authored-by: guilpier-code <62292552+guilpier-code@users.noreply.github.com>
Co-authored-by: Florian OMNES <florian.omnes@rte-france.com>

--- a/src/tests/src/solver/modelParser/CMakeLists.txt
+++ b/src/tests/src/solver/modelParser/CMakeLists.txt
@@ -2,6 +2,8 @@
 set(SOURCE_FILES
         testModelParser.cpp
         testModelTranslator.cpp
+        test_full.cpp
+        enum_operators.h
 )
 
 # Add executable
