--- a/.github/workflows/windows-vcpkg.yml
+++ b/.github/workflows/windows-vcpkg.yml
@@ -152,14 +152,14 @@ jobs:
         run: |
           git submodule update --init --remote src/tests/resources/Antares_Simulator_Tests_NR
 
-      #- name: Run named mps tests
-      #  if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
-      #  uses: ./.github/workflows/run-tests
-      #  with:
-      #    simtest-tag: ${{ env.SIMTEST }}
-      #    batch-name: valid-named-mps
-      #    os: ${{ env.os }}
-      #    variant: "named-mps"
+      - name: Run named mps tests
+        if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
+        uses: ./.github/workflows/run-tests
+        with:
+          simtest-tag: ${{ env.SIMTEST }}
+          batch-name: valid-named-mps
+          os: ${{ env.os }}
+          variant: "named-mps"
 
       - name: Run unfeasibility-related tests
         if: ${{ env.RUN_SIMPLE_TESTS == 'true' && ! cancelled() }}
@@ -250,13 +250,13 @@ jobs:
         with:
           feature: "features/short_tests.feature"
 
-      #- name: Run mps tests
-      #  if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
-      #  uses: ./.github/workflows/run-tests
-      #  with:
-      #    simtest-tag: ${{ env.SIMTEST }}
-      #    batch-name: valid-mps
-      #    os: ${{ env.os }}
+      - name: Run mps tests
+        if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
+        uses: ./.github/workflows/run-tests
+        with:
+          simtest-tag: ${{ env.SIMTEST }}
+          batch-name: valid-mps
+          os: ${{ env.os }}
 
       - name: Run parallel tests
         if: ${{ env.RUN_SIMPLE_TESTS == 'true' && !cancelled() }}
