--- a/src/libs/antares/CMakeLists.txt
+++ b/src/libs/antares/CMakeLists.txt
@@ -20,6 +20,8 @@ add_subdirectory(exception)
 add_subdirectory(sys)
 add_subdirectory(writer)
 
+add_subdirectory(optimization-options)
+
 set(SRC
     config.h
     constants.h
